...
                    <rect key="frame" x="134" y="67" width="80" height="44"/>
                    <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="44" id="QPg-ID-lQQ"/>
                        <constraint firstAttribute="width" constant="80" id="nbR-ga-4mC"/>
                    </constraints>
                    <state key="normal" title="Next"/>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstAttribute="trailing" secondItem="X0B-ve-59X" secondAttribute="trailing" constant="10" id="8Ue-sP-Cff"/>
                <constraint firstItem="UaH-5X-f7b" firstAttribute="top" secondItem="X0B-ve-59X" secondAttribute="bottom" constant="10" id="LF5-9A-OGz"/>
...
